--- a/Victorian-Flavor-Mod-South_America_Content/localization/english/replace/names_l_english.yml
+++ b/Victorian-Flavor-Mod-South_America_Content/localization/english/replace/names_l_english.yml
@@ -16181,3 +16181,6 @@
   Quaaden: "Quaaden"
   Falco: "Falco"
   Kinga: "Kinga"
+  Acuna: "Acuña"
+  Vazquez_de_Acuna: "Vazquez de Acuña"
+  Toro_zambrano: "Toro Zambrano"
